Bug 1728798: Print original error stack in the shell instead of the pending exception stack. r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D124355